ejercicio5_2/manifests/peerauthentication.yaml
# PeerAuthentication for mutual TLS (mTLS)
# This enforces mTLS for traffic within the mesh
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: AUTO
